fix more sonarqube